# playground

./: .gitmodules  README  README.md
AOC/: p1.py
Arduino/: Integer_From_Processing.ino  Makefile
Audio/: data.txt  parse_and_play.py
BOOST/: Makefile  fiber.cpp  splt.cpp
CLANG/: compare.c
CLike/: file_open_performance.cpp  float_int.c  malloc_calloc.c  numeric_limit.cpp  random_boost_normal.cpp  random_boost_std.cpp  random_equality.cpp  test_class.cpp
CPP11/: copy_assign.cpp  ref.cpp  regex_replace.cpp  switch_in_for.cpp  test_map_insert.cpp
CS/: Makefile  compressed_sensing.py  figure_compressend_sensing.tex  figure_compressend_sensing_DCT.tex  figure_measurement_matrix.tex  figure_measurements.tex  figure_signal.tex  figure_solution.tex  labnote.pandoc  magic_reconstruction.py
CURVE_FIT/: curve_fit.py  data_insertion_freq.csv
CYGWIN/: Makefile  README.md  test.cpp
Cython/: A.h  B.h  a.pxd  ab.cpp  ab.pyx  b.pxd  run.sh  setup.c  setup.cpp  setup.py  test.py
DSP/: ks.ipynb
EE309/: Makefile  a.c  exp5.c  hw5.c  quadratic.c  represent.c  stud.c
Esterel/: foo.strl  test.txt
FoundationOfVLSICad/: term_paper_team.tex
HPC/: CMakeLists.txt  test_boost_compute_core.cpp
Haskell/: aivika_sim.hs  dissimilar.hs  length.hs  proabability.hs  random_proc.hs  simple_probabilty.hs  vti.hs
HaskellMoodle/: ComparePrograms.hs  Configuration.hs  DilString.hs  DownloadPrograms.hs  GetPrograms.hs  Global.hs  Main.hs  get_data.hs  get_programs.hs  snifferrc
HopfieldNetwork/: demo_from_neurodynamics.py
Imaging/: peri_demo.py
KIWI/: build.sh
LATEX/: test_align.tex
Leetcode/: Makefile
LinearAlgebra/: col_red.py  frames.py
MOOSE/: test_stochastic.py  test_stochastic_diffusive.py
Maxima/: 221.mc  229.mc  229_fig.tex  chained_first_order_3reac.mc  chained_first_order_reac.maxima  chained_first_order_reac.mc  ilt2.maxima
Metapost/: example.mp
Models/interval_vs_aggregate/: main.py  pyproject.toml
MontyHall/: monty_hall.py
MoodleIITB/: compare.py  compare_programs.py  create_graph.py  iitb_moodle.py  init_moodle.py  lang_ctype.py  lang_pdf.py  lang_vhdl.py  moodle.py  moodlerc  msg_database.py  process_log.py  (+3 more)
RUST/geolocation-linux/: Cargo.toml
RUST/geolocation-linux/src/: main.rs
VideoStabilization/: CMakeLists.txt  videostab.cpp
VideoStabilization/cmake_modules/: FindOPENCV.cmake
VideoStabilization/src/: main.cpp  motion_stabilizer.hpp  videoio.hpp
(+427 files in other folders)
