[tool.poetry]
name = "interval-vs-aggregate"
version = "0.1.0"
description = ""
authors = ["Dilawar Singh <dilawar@subcom.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
typer = "^0.12.3"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
